Demos: Getting rid of the vertical scrollbar on the page. Fixes #6024.

--- a/demos/_assets/css/jqm-demos.css
+++ b/demos/_assets/css/jqm-demos.css
@@ -638,8 +638,9 @@ h2.jqm-home-widget {
 	}
 	
 	/* Footer */
-	.ui-page .jqm-footer{
+	.ui-page .jqm-footer {
 		position:absolute;
+		bottom: 0;
 	}
 	.jqm-footer {
 		overflow: hidden;
